examples/policies/l4/l3_l4_combined.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l4-rule"
spec:
  endpointSelector:
    matchLabels:
      role: backend
  ingress:
  - fromEndpoints:
    - matchLabels:
      role: frontend
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
